--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 <!-- Work section in grid, using cards -->
 <a id="portfolio">
 <div class="container-fluid"></a>
-    <div class="row bg-light p-5">
+    <div class="row bg-white p-5">
         <h1 class="text-dark text-center portfolio">PORTFOLIO</h1>
         <div class="col-12 col-md-6 col-lg-4">
-            <div class="card text-dark bg-light mb-3 border-light">
+            <div class="card text-dark bg-white mb-3 border-white">
                 <img src="./images/pexels-karolina-grabowska-5632386.jpg" class="card-img-top" alt="A Responsive Shopping Cart">
                 <div class="card-body">
                     <h5 class="card-title">A Shopping Cart</h5>
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-            <div class="card text-center text-dark bg-light mb-3 border-light">
+            <div class="card text-md-center text-dark bg-white mb-3 border-white">
                 <img src="./images/pexels-tima-miroshnichenko-6694543.jpg" class="card-img-top" alt="A financial calculator">
                 <div class="card-body">
                     <h5 class="card-title">A Financial Calculator</h5>
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-            <div class="card text-end text-dark bg-light mb-3 border-light" >
+            <div class="card text-md-end text-dark bg-white mb-3 border-white" >
                 <img src="./images/pexels-ann-h-18833779.jpg" class="card-img-top" alt="A Portfolio Website">
                 <div class="card-body">
                     <h5 class="card-title">A CSS & HTML Portfolio</h5>
@@ -100,11 +100,11 @@
 
 <!-- Learn About Me section -->
     <a id="aboutTom">
-    <div class="row bg-dark p-5 "></a>
-        <div class="col-12 col-md-8">
-            <h1 class="text-center text-danger">Lets Learn About Tom</h1>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item bg-dark text-warning">
+    <div class="row bg-light d-flex justify-content-center p-5"></a>
+        <div class="col-12 col-lg-4">
+            <h1 class="text-center text-dark">Lets Learn About Tom</h1>
+            <div class="accordion accordion-flush p-5" id="accordionFlushExample">
+                <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingOne">
                         <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                         Who on earth is Tom?
@@ -114,7 +114,7 @@
                         <div class="accordion-body">Legend has it that Tom once beat a computer at chess using only his mind. Some say he's part ninja, part unicorn, and 100% mysterious. But who is Tom, really? We're still trying to figure that out ourselves.</div>
                     </div>
                 </div>
-                <div class="accordion-item bg-dark text-warning">
+                <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingTwo">
                         <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                         Does Tom even exist?
@@ -124,7 +124,7 @@
                         <div class="accordion-body">Rumors, myths, and wild speculations surround the existence of Tom. Some believe he's an undercover superhero, while others think he's a hologram created by mischievous aliens. We're not saying he's a ghost, but has anyone actually seen him and a ghost in the same room?</div>
                     </div>
                 </div>
-                <div class="accordion-item bg-dark text-warning">
+                <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingThree">
                         <button class="accordion-button collapsed bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                         Where can one locate said Tom?
@@ -141,7 +141,7 @@
      <!-- Carosel of my images -->
 
    
-        <div id="carouselExampleDark" class="carousel carousel-dark slide col-12 col-md-4 " data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide col-12 col-lg-4 " data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -151,22 +151,16 @@
                 <div class="carousel-item active" data-bs-interval="10000">
                     <img src="./images/Untitled (8).png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
                     <img src="./images/Untitled (7).png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./images/Untitled (6).png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
                     </div>
                 </div>
             </div>
@@ -180,23 +174,147 @@
             </button>
         </div>
     </row>
+</div>
     <!-- End of carosel -->
 <!-- End of Learn About Me section -->
 
-<!-- About me section -->
 
-    <!-- GIT HUB OR LINKED IN FORM INPUT -->
-    <div class="row bg-light">
-        
-    </div>
-    <!-- Popover end -->
-   
-<!-- End of about me section -->
 
 <!-- Footer section -->
+    <div class="row">
+        <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+    <!-- Grid container -->
+            <div class="container p-4 pb-0">
+    <!-- Section: Links -->
+                <section class="">
+    <!--Grid row-->
+                    <div class="row">
+    <!-- Grid column -->
+                        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">
+                                Company name
+                            </h6>
+                            <p>
+                                Here you can use rows and columns to organize your footer
+                                content. Lorem ipsum dolor sit amet, consectetur adipisicing
+                                elit.
+                            </p>
+                        </div>
+    <!-- Grid column -->
 
-</div>
+                        <hr class="w-100 clearfix d-md-none" />
+
+    <!-- Grid column -->
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+                            <p>
+                                <a class="text-white">MDBootstrap</a>
+                            </p>
+                            <p>
+                                <a class="text-white">MDWordPress</a>
+                            </p>
+                            <p>
+                                <a class="text-white">BrandFlow</a>
+                            </p>
+                            <p>
+                                <a class="text-white">Bootstrap Angular</a>
+                            </p>
+                        </div>
+    <!-- Grid column -->
+
+                        <hr class="w-100 clearfix d-md-none" />
+
+    <!-- Grid column -->
+                        <hr class="w-100 clearfix d-md-none" />
+
+    <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                            <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+                            <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+                            <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+                            <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+                        </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+
+    <!-- Facebook -->
+                            <a class="btn btn-primary btn-floating m-1"                        style="background-color: #3b5998"
+                                href="#!"
+                                role="button"
+                                ><i class="fab fa-facebook-f"></i
+                                ></a>
+
+    <!-- Twitter -->
+                            <a
+                                class="btn btn-primary btn-floating m-1"
+                                style="background-color: #55acee"
+                                href="#!"
+                                role="button"
+                                ><i class="fab fa-twitter"></i
+                                ></a>
+
+    <!-- Google -->
+                            <a
+                                class="btn btn-primary btn-floating m-1"
+                                style="background-color: #dd4b39"
+                                href="#!"
+                                role="button"
+                                ><i class="fab fa-google"></i
+                                ></a>
+
+    <!-- Instagram -->
+                            <a
+                                class="btn btn-primary btn-floating m-1"
+                                style="background-color: #ac2bac"
+                                href="#!"
+                                role="button"
+                                ><i class="fab fa-instagram"></i
+                                ></a>
+
+    <!-- Linkedin -->
+                            <a
+                                class="btn btn-primary btn-floating m-1"
+                                style="background-color: #0082ca"
+                                href="#!"
+                                role="button"
+                                ><i class="fab fa-linkedin-in"></i
+                                ></a>
+    <!-- Github -->
+                            <a
+                                class="btn btn-primary btn-floating m-1"
+                                style="background-color: #333333"
+                                href="#!"
+                                role="button"
+                                ><i class="fab fa-github"></i
+                                ></a>
+                        </div>
+                    </div>
+    <!--Grid row-->
+                </section>
+    <!-- Section: Links -->
+            </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+            <div
+                class="text-center p-3"
+                style="background-color: rgba(0, 0, 0, 0.2)"
+                >
+                © 2020 Copyright:
+                <a class="text-white" href="https://mdbootstrap.com/"
+                >MDBootstrap.com</a
+                >
+            </div>
+    <!-- Copyright -->
+        </footer>
+    </div>
 <!-- End of footer section -->
+
+<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
