--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand link-dark" href="#">
             <img src="./images/logopink - Copy.png" alt="" width="80" height="35">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#aboutTom">About Tom</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Contact</a></li>
+                <li><a class="dropdown-item" href="#contactSection">Contact</a></li>
                 </ul>
             </li>
             </ul>
@@ -80,7 +80,7 @@
                 <div class="card-body">
                     <h5 class="card-title">A Shopping Cart</h5>
                     <p class="card-text">Experience seamless shopping with Python! This Python program lets users effortlessly manage their pet product selections. Add, remove items, view the cart, and calculate the total cost with an intuitive interface. Happy shopping!</p>
-                    <a href="https://github.com/DrWho1369/shopping-cart" class="btn btn-warning text-secondary">Spend Some Money</a>
+                    <a href="https://github.com/DrWho1369/shopping-cart" target=”_blank” class="btn btn-warning text-secondary shadow">Spend Some Money</a>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                 <div class="card-body">
                     <h5 class="card-title">A Financial Calculator</h5>
                     <p class="card-text"> Empower your financial decisions with an Investment Calculator for simple/compound interest and a Loan Interest Repayment Calculator. Developed during Hyperion Dev Bootcamp, this open-source tool is ready for exploration and contribution.</p>
-                    <a href="https://github.com/DrWho1369/Financial-Calculators" class="btn btn-warning text-secondary">Calculate Now</a>
+                    <a href="https://github.com/DrWho1369/Financial-Calculators" target=”_blank” class="btn btn-warning text-secondary shadow">Calculate Now</a>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
                 <div class="card-body">
                     <h5 class="card-title">A CSS & HTML Portfolio</h5>
                     <p class="card-text">Designed with HTML, CSS, JavaScript. Explore my front-end portfolio showcasing CSS mastery, responsiveness, and deployed projects. Seamless navigation, interactive grids, and live application links. Experience the future of web development!</p>
-                    <a href="https://github.com/DrWho1369/portfolio" class="btn btn-warning text-secondary">Check it out</a>
+                    <a href="https://github.com/DrWho1369/portfolio" target=”_blank” class="btn btn-warning text-secondary shadow">Check it out</a>
                 </div>
             </div>
         </div>
@@ -146,11 +146,9 @@
                 </div>
             </div>
         </div>
-    
+<!-- End of Learn About Me section -->   
 
-     <!-- Carosel of my images -->
-
-   
+<!-- Carosel of my images -->
         <div id="carouselExampleDark" class="carousel carousel-dark slide col-12 col-lg-6 pb-5" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -159,17 +157,17 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="./images/Untitled (8).png" class="d-block w-100" alt="...">
+                    <img src="./images/Untitled (8).png" class="d-block w-100" alt="Tom and his family">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./images/Untitled (7).png" class="d-block w-100" alt="...">
+                    <img src="./images/Untitled (7).png" class="d-block w-100" alt="Tom at dinner">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/Untitled (6).png" class="d-block w-100" alt="...">
+                    <img src="./images/Untitled (6).png" class="d-block w-100" alt="Tom in the wild">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
@@ -184,12 +182,11 @@
             </button>
         </div>
     </row>
+<!-- End of carosel -->
 
-    <!-- End of carosel -->
-
-    <!-- Contact Me Form -->
-
-    <form class="row bg-white gy-2 gx-3 align-items-center justify-content-center p-5">
+<!-- Contact Me Form -->
+<a id="contactSection">
+    <form class="row bg-white gy-2 gx-3 align-items-center justify-content-center p-5"></a>
         <h1 class="text-center">Contact Me!</h1>
         <div class="col-auto">
             <label class="visually-hidden" for="autoSizingInput">Name</label>
@@ -220,144 +217,39 @@
             </div>
         </div>
         <div class="col-auto">
-            <button type="submit" class="btn btn-dark">Submit</button>
+            <button type="submit" class="btn btn-dark shadow">Submit</button>
         </div>
     </form>
 </div>
-<!-- End of Learn About Me section -->
-
-
+<!-- End of Contact Me section -->
 
 <!-- Footer section -->
     <div class="row">
         <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
-    <!-- Grid container -->
             <div class="container p-4 pb-0">
-    <!-- Section: Links -->
                 <section class="">
-    <!--Grid row-->
                     <div class="row">
-    <!-- Grid column -->
-                        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">
-                                Company name
+                                Tom Baker ESQ
                             </h6>
                             <p>
-                                Here you can use rows and columns to organize your footer
-                                content. Lorem ipsum dolor sit amet, consectetur adipisicing
-                                elit.
+                                No pixels were harmed in the making of this site, but our web designer might need a nap. Remember, life is short, so spend it wisely – like, hunting for the mythical Tom in our archives.
                             </p>
                         </div>
-    <!-- Grid column -->
-
                         <hr class="w-100 clearfix d-md-none" />
-
-    <!-- Grid column -->
-                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                            <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
-                            <p>
-                                <a class="text-white">MDBootstrap</a>
-                            </p>
-                            <p>
-                                <a class="text-white">MDWordPress</a>
-                            </p>
-                            <p>
-                                <a class="text-white">BrandFlow</a>
-                            </p>
-                            <p>
-                                <a class="text-white">Bootstrap Angular</a>
-                            </p>
-                        </div>
-    <!-- Grid column -->
-
                         <hr class="w-100 clearfix d-md-none" />
-
-    <!-- Grid column -->
                         <hr class="w-100 clearfix d-md-none" />
-
-    <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-                            <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-                            <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-                            <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-                            <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-                        </div>
-    <!-- Grid column -->
+                            <a target=”_blank” href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/" class="link-light"><p>LiNKedIn Is LeFT</p></a>
+                            <a target=”_blank” href="https://github.com/DrWho1369" class="link-light"><p>GIt-hUb Is RigHT</p></a>
 
-    <!-- Grid column -->
-                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                            <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
-
-    <!-- Facebook -->
-                            <a class="btn btn-primary btn-floating m-1"                        style="background-color: #3b5998"
-                                href="#!"
-                                role="button"
-                                ><i class="fab fa-facebook-f"></i
-                                ></a>
-
-    <!-- Twitter -->
-                            <a
-                                class="btn btn-primary btn-floating m-1"
-                                style="background-color: #55acee"
-                                href="#!"
-                                role="button"
-                                ><i class="fab fa-twitter"></i
-                                ></a>
-
-    <!-- Google -->
-                            <a
-                                class="btn btn-primary btn-floating m-1"
-                                style="background-color: #dd4b39"
-                                href="#!"
-                                role="button"
-                                ><i class="fab fa-google"></i
-                                ></a>
-
-    <!-- Instagram -->
-                            <a
-                                class="btn btn-primary btn-floating m-1"
-                                style="background-color: #ac2bac"
-                                href="#!"
-                                role="button"
-                                ><i class="fab fa-instagram"></i
-                                ></a>
-
-    <!-- Linkedin -->
-                            <a
-                                class="btn btn-primary btn-floating m-1"
-                                style="background-color: #0082ca"
-                                href="#!"
-                                role="button"
-                                ><i class="fab fa-linkedin-in"></i
-                                ></a>
-    <!-- Github -->
-                            <a
-                                class="btn btn-primary btn-floating m-1"
-                                style="background-color: #333333"
-                                href="#!"
-                                role="button"
-                                ><i class="fab fa-github"></i
-                                ></a>
                         </div>
                     </div>
-    <!--Grid row-->
                 </section>
-    <!-- Section: Links -->
             </div>
-    <!-- Grid container -->
-
-    <!-- Copyright -->
-            <div
-                class="text-center p-3"
-                style="background-color: rgba(0, 0, 0, 0.2)"
-                >
-                © 2020 Copyright:
-                <a class="text-white" href="https://mdbootstrap.com/"
-                >MDBootstrap.com</a
-                >
-            </div>
-    <!-- Copyright -->
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2023 Thomas Baker</div>
         </footer>
     </div>
 <!-- End of footer section -->
