--- a/index.html
+++ b/index.html
@@ -69,15 +69,14 @@
 </div>
 <!-- End of Hero Section -->
 
-<!-- Work section in grid, using cards -->
+<!-- Work section in grid, using cards + skills section -->
 <a id="portfolio">
 <div class="container-fluid"></a>
-    <div class="row bg-white p-5">
-        <h2 class="text-center pb-3 fw-bold">SKILLS:</h2>
-        <h4 class="text-center">Front-End Development · HTML · Cascading Style Sheets (CSS) · JavaScript · AJAX · API · JQu · JSON · Bootstrap (Framework) · DOMS · React.js · Node.js · ES6 · Object-Oriented Programming (OOP)</h4>
-    </div>
- 
-    <div class="row p-lg-5" style="background-color: #ff69b4b6">
+    <div class="row bg-white p-lg-5">
+            <div class="col m-2" style="background-color: #ff69b486">
+                <h2 class="text-center pb-3 fw-bold">SKILLS:</h2>
+                <h6 class="text-center">Front-End Development · HTML · Cascading Style Sheets (CSS) · JavaScript · AJAX · API · JQu · JSON · Bootstrap (Framework) · DOMS · React.js · Node.js · ES6 · Object-Oriented Programming (OOP)</h6>
+            </div>
         <h1 class="text-dark text-center portfolio pb-5 p-5 fw-bold">PORTFOLIO</h1>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card text-dark bg-white mb-3 border-white">
@@ -115,13 +114,13 @@
 
 <!-- Learn About Me section -->
     <a id="aboutTom">
-    <div class="row bg-light d-flex justify-content-center p-lg-5"></a>
+    <div class="row d-flex justify-content-center p-lg-5" style="background-color: #ff69b486"></a>
         <div class="col-12 col-lg-6">
             <h1 class="text-center text-dark p-5 fw-bold">Lets Learn About Tom</h1>
             <div class="accordion accordion-flush p-lg-5" id="accordionFlushExample">
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed bg-warning text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <button class="accordion-button collapsed text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="background-color: #5F093D">
                         Who on earth is Tom?
                         </button>
                     </h2>
@@ -131,7 +130,7 @@
                 </div>
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed bg-warning text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        <button class="accordion-button collapsed text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="background-color: #b21368" >
                         Does Tom even exist?
                         </button>
                     </h2>
@@ -141,7 +140,7 @@
                 </div>
                 <div class="accordion-item bg-light text-dark-emphasis">
                     <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed bg-warning text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        <button class="accordion-button collapsed text-light" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="background-color:#d67ba8">
                         Where can one locate said Tom?
                         </button>
                     </h2>
@@ -191,7 +190,7 @@
 
 <!-- Contact Me Form -->
 <a id="contactSection">
-    <form class="row bg-white gy-2 gx-3 align-items-center justify-content-center p-5"></a>
+    <form class="row gy-2 gx-3 align-items-center justify-content-center p-5" style="background-color: #efebe0"></a>
         <h1 class="text-center fw-bold pb-5">Contact Me!</h1>
         <div class="col-auto">
             <label class="visually-hidden" for="autoSizingInput">Name</label>
@@ -230,12 +229,12 @@
 
 <!-- Footer section -->
 <div class="row">
-    <footer class="text-center text-lg-start text-dark" style="background-color: #ff69b4b6">
+    <footer class="text-center text-lg-start text-dark" style="background-color: #efebe0">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
                     <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">
+                        <h6 class="text-uppercase mb-4 fw-bold">
                             Tom Baker ESQ
                         </h6>
                         <p>
@@ -246,7 +245,7 @@
                     <hr class="w-100 clearfix d-md-none" />
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                        <h6 class="text-uppercase mb-4 fw-bold">Contact</h6>
                         <a target=”_blank” href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/" class="dark-light"><p>LiNKedIn Is LeFT</p></a>
                         <a target=”_blank” href="https://github.com/DrWho1369" class="dark-light"><p>GIt-hUb Is RigHT</p></a>
 
