--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 <!-- Contact Me Form -->
 <a id="contactSection">
-    <form class="row gy-2 gx-3 align-items-center justify-content-center p-5" style="background-color: #efebe0"></a>
+    <form class="row gy-2 gx-3 align-items-center justify-content-center p-3 m-3" style="background-color: #efebe0"></a>
         <h1 class="text-center fw-bold pb-5">Contact Me!</h1>
         <div class="col-auto">
             <label class="visually-hidden" for="autoSizingInput">Name</label>
@@ -229,7 +229,7 @@
 
 <!-- Footer section -->
 <div class="row">
-    <footer class="text-center text-lg-start text-dark" style="background-color: #efebe0">
+    <footer class="text-center text-lg-start text-light" style="background-color: #2d0272a2">
         <div class="container p-4 pb-0">
             <section class="">
                 <div class="row">
@@ -242,12 +242,10 @@
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
-                    <hr class="w-100 clearfix d-md-none" />
-                    <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 fw-bold">Contact</h6>
-                        <a target=”_blank” href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/" class="dark-light"><p>LiNKedIn Is LeFT</p></a>
-                        <a target=”_blank” href="https://github.com/DrWho1369" class="dark-light"><p>GIt-hUb Is RigHT</p></a>
+                        <a target=”_blank” href="https://www.linkedin.com/in/thomas-baker-anutr-0b9758222/" class="link-light"><p>LiNKedIn Is LeFT</p></a>
+                        <a target=”_blank” href="https://github.com/DrWho1369" class="link-light"><p>GIt-hUb Is RigHT</p></a>
 
                     </div>
                 </div>
